set width to content of sidebar; Fixed: home page z-index

--- a/client/modules/Program/Program.css
+++ b/client/modules/Program/Program.css
@@ -1,6 +1,7 @@
 .program {
   min-width: 900px;
   padding-top: 150px;
+  z-index: 997;
 }
 
 .inputbox-container {
