--- a/client/modules/Program/components/SideBar/SideBar.css
+++ b/client/modules/Program/components/SideBar/SideBar.css
@@ -20,6 +20,7 @@
 
 .content {
   margin: 0 40px;
+  width: 245px;
 }
 
 .sidebar.hide .content {
